# django_perms

./: Makefile  db.sqlite3  pyproject.toml
apps/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_product_owner.py  0003_product_is_premium.py  0004_alter_product_options.py  0005_alter_product_options.py
root/: settings.py  urls.py
